fixed overflowing image

--- a/sass/components/_intro.scss
+++ b/sass/components/_intro.scss
@@ -1,110 +1,115 @@
 .intro {
-    position: relative;
+  position: relative;
+  width: 100%;
+  padding-bottom: 6rem;
+
+  background-color: var(--very-light-gray);
+
+  &__bg-image {
+    @media only screen and (min-width: $bp-large) {
+      position: absolute;
+      height: 100%;
+      width: 100%;
+      top: 0;
+      right: 0;
+      background-image: url("../images/bg-intro-desktop.svg");
+      background-position-x: 90rem;
+      background-position-y: -28rem;
+      background-repeat: no-repeat;
+      overflow-x: hidden;
+    }
+  }
+
+  & .container {
     width: 100%;
-    padding-bottom: 6rem;
 
-    background-color: var(--very-light-gray);
+    display: grid;
+    grid-template-rows: repeat(2, min-content);
 
-    & .container {
-        width: 100%;
+    @media only screen and (min-width: $bp-large) {
+      width: 90%;
+      grid-template-rows: 60rem;
+      grid-template-columns: 40% 60%;
+      grid-gap: 4rem;
 
-        display: grid;
-        grid-template-rows: repeat(2, min-content);
-
-        @media only screen and (min-width: $bp-large) {
-            width: 90%;
-            grid-template-rows: 60rem;
-            grid-template-columns: 40% 60%;
-            grid-gap: 4rem;
-    
-            max-height: 60rem;
-        }
+      max-height: 60rem;
     }
+  }
 
-    &__content {
-        width: 90%;
-        margin: 0 auto;
+  &__content {
+    width: 90%;
+    margin: 0 auto;
 
-        grid-row: 2 / 3;
+    grid-row: 2 / 3;
 
-        text-align: center;
+    text-align: center;
 
-        & > * {
-            margin-bottom: 3rem;
-        }
-
-        @media only screen and (min-width: $bp-large) {
-            width: 100%;
-            grid-row: 1 / 2;
-
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: flex-start;
-
-            text-align: left;
-        }
-    }
-
-    &__title {
-        font-size: 3.6rem;
-
-        @media only screen and (min-width: $bp-med) {
-            font-size: 5.4rem;
-        }
-
-        @media only screen and (min-width: $bp-large) {
-            font-size: 6.2rem;       
-        }
-    }
-
-    &__image {
-        width: 100%;
-
-        display: flex;
-        justify-content: center;
-
-        background-image: url("../images/bg-intro-mobile.svg");
-        background-repeat: no-repeat;
-        background-position: center;
-        background-size: cover;
-
-        & > img {
-            position: relative;
-            z-index: 3;
-            width: 100%;
-            transform: translateY(-15%);
-
-            @media only screen and (min-width: $bp-large) {
-               display: none;
-            }
-        }
-
-        @media only screen and (min-width: $bp-large) {
-            background-image: none;
-        }
+    & > * {
+      margin-bottom: 3rem;
     }
 
     @media only screen and (min-width: $bp-large) {
+      width: 100%;
+      grid-row: 1 / 2;
 
-        &::after {
-            content: url("../images/bg-intro-desktop.svg");
-            width: 63rem;
-            height: 50rem;
-            position: absolute;
-            top: -28rem;
-            right: 28rem;
-            z-index: 0;
-        }
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: flex-start;
 
-        &::before {
-            content: url("../images/image-mockups.png");
-            width: 77rem;
-            height: 94rem;
-            position: absolute;
-            top: -12rem;
-            right: 0;
-            z-index: 20;
-        }
+      text-align: left;
     }
+  }
+
+  &__title {
+    font-size: 3.6rem;
+
+    @media only screen and (min-width: $bp-med) {
+      font-size: 5.4rem;
+    }
+
+    @media only screen and (min-width: $bp-large) {
+      font-size: 6.2rem;
+    }
+  }
+
+  &__image {
+    width: 100%;
+    height: 100%;
+
+    display: flex;
+    justify-content: center;
+
+    background-image: url("../images/bg-intro-mobile.svg");
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+
+    & > img {
+      position: relative;
+      z-index: 3;
+      width: 100%;
+      transform: translateY(-15%);
+
+      @media only screen and (min-width: $bp-large) {
+        display: none;
+      }
+    }
+
+    @media only screen and (min-width: $bp-large) {
+      background-image: none;
+    }
+  }
+
+  @media only screen and (min-width: $bp-large) {
+    &::before {
+      content: url("../images/image-mockups.png");
+      width: 77rem;
+      height: 94rem;
+      position: absolute;
+      top: -12rem;
+      right: 0;
+      z-index: 20;
+    }
+  }
 }
